--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 .outer-container {
-  width: 80%;
+  width: 1200px;
   margin: auto;
   text-align: center;
+  display: flex;
 }
 
 .button-container {
   display: flex;
   justify-content: center;
-  margin-bottom: 20px;
-  margin-top: 20px;
+  margin: 20px 0;
 }
 
 button {
@@ -21,6 +21,8 @@ button {
 .quarter {
   border: 1px solid #ddd;
   padding: 10px;
+  margin-top: 20px;
+  text-align: center;
 }
 
 .quarter-header {
@@ -28,9 +30,13 @@ button {
   margin-bottom: 10px;
 }
 
+.schedule-container {
+  display: flex;
+  justify-content: center;
+}
+
 .schedule-table {
   display: table;
-  width: 100%;
   border-collapse: collapse;
 }
 
@@ -42,6 +48,7 @@ button {
   display: table-cell;
   border: 1px solid #ddd;
   padding: 10px;
+  vertical-align: top;
 }
 
 .period-cell {
@@ -49,26 +56,67 @@ button {
   background-color: #f0f0f0;
 }
 
+.subjects-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .subject-button {
   background-color: #f0f0f0;
   border: 2px solid #ddd;
-  border-radius: 20px;
-  padding: 12px 20px;
+  border-radius: 10px;
+  padding: 1px 10px;
   margin: 5px;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 15px;
   text-align: center;
   transition: background-color 0.3s, transform 0.2s;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 100%;
 }
 
 .subject-button.active {
-  background-color: red;
+  background-color: skyblue;
   color: #fff;
-  border-color: red;
+  border-color: skyblue;
 }
 
 .subject-button:hover {
-  background-color: #ddd;
+  /* background-color: orange; */
   transform: scale(1.05);
 }
+
+.selected-subject-info {
+  margin-top: 20px;
+  text-align: left;
+  width: 200px; /* 必要に応じて幅を調整 */
+  margin-left: 20px; /* 左側にスペースを確保 */
+}
+
+.selected-subject-info h3 {
+  font-size: 1.2em;
+}
+
+.selected-subject-info ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.selected-subject-info li {
+  margin-bottom: 5px;
+}
+
+.schedule-table {
+  display: inline-table; /* テーブルを中央に配置 */
+  border-collapse: collapse;
+  margin: 0 auto; /* テーブルを中央に配置 */
+}
+
+
+.quarter {
+  flex: 1;
+  margin-right: 20px; /* 右側にスペースを確保 */
+}
+
+
